# oh-my-trading

./: .gitignore  AGENTS.md  README.md
apps/web/: package-lock.json  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/markets/[symbol]/: error.tsx  (+2 more)
apps/web/app/mt5/: page.tsx
apps/web/components/: app-shell.tsx
apps/web/features/dashboard/: dashboard-overview.tsx
apps/web/features/markets/: candlestick-chart.tsx  market-chart-page.tsx
apps/web/features/mt5/: mt5-dashboard.tsx
apps/web/lib/: api-client.ts
apps/web/tests/: smoke.test.mjs
apps/web/tests/e2e/: markets.smoke.spec.ts
bridges/mt5-python/: README.md  pyproject.toml
bridges/mt5-python/src/mt5_bridge/: __init__.py  __main__.py  client.py  config.py  mt5_adapter.py  payloads.py  runner.py
bridges/mt5-python/tests/: test_config.py  test_payloads.py  test_runner.py
deployments/: .env.example  docker-compose.yml
docs/: AGENT_MEMORY.md  AI_AGENT_INDEX.md  README.md
docs/architecture/: database.md  mt5-integration.md  system-overview.md
docs/product/: ai-trading-agent-dashboard-plan.md  mt5-xauusd-mvp.md
docs/runbooks/: implementation-tasks.md  mt5-xauusd-mvp-tasks.md  mt5-xauusd-next-tasks.md
docs/superpowers/plans/: 2026-06-18-mt5-xauusd-next-implementation.md
services/api/: go.mod  go.sum
services/api/cmd/api/: main.go
services/api/cmd/worker/: main.go
services/api/migrations/: 000002_create_symbols.sql  000003_create_candles.sql  000004_create_mt5_tables.sql  000005_create_paper_signals.sql  000006_seed_xauusd_symbol.sql
(+50 files in other folders)
